opLT convolution definition, bachman1964 ISBN

--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -470,11 +470,12 @@ Let $\omega\eqd\Imag(s)$
 %======================================
 %--------------------------------------
 \begin{definition}
-\label{def:conv}
 \footnote{
-  \citerp{bachman1964}{6},
+  \citerpgc{bachman2002}{268}{9780387988993}{Definition 5.2.1, but with $1/2\pi$ scaling factor},
+  \citerpg{bachman1964}{6}{9781483267562},
   \citerpgc{bracewell1978}{224}{007007013X}{Table 11.1 Theorems for the Laplace Transform}
   }
+\label{def:conv}
 %--------------------------------------
 \defbox{\indxs{\conv}\begin{array}{M}
   The \opd{convolution operation} is defined as % $\conv\in\clF{\R^2}{\R}$ is defined as
@@ -492,6 +493,9 @@ is equivalent to convolution in the ``s domain" and
 vice-versa.
 %--------------------------------------
 \begin{theorem}[\thmd{convolution theorem}]
+\footnote{
+  \citerpg{bachman1964}{8}{9781483267562}
+  }
 \label{thm:opLT_conv}
 %--------------------------------------
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
