--- a/common/harFour.tex
+++ b/common/harFour.tex
@@ -411,24 +411,24 @@ complex numbers.
 \label{sec:conv}
 \index{convolution}
 %======================================
-%--------------------------------------
-\begin{definition}
-\label{def:conv}
-\footnote{
-  \citerp{bachman1964}{6},
-  \citerpgc{bracewell1978}{108}{007007013X}{Convolution theorem}
-  }
-%--------------------------------------
-\defbox{\indxs{\conv}\begin{array}{M}
-  The \opd{convolution operation} is defined as % $\conv\in\clF{\R^2}{\R}$ is defined as
-  \\\indentx$\ds
-    \brs{\ff\conv\fg}(x)
-    \eqd \ff(x)\conv \fg(x)
-    \eqd \int_{u\in\R} \ff(u)\fg(x-u) \du
-    \qquad\scy\forall\ff,\fg\in\spLLRBu
-  $
-\end{array}}
-\end{definition}
+%redundant: laplace.tex %--------------------------------------
+%redundant: laplace.tex \begin{definition}
+%redundant: laplace.tex \label{def:conv}
+%redundant: laplace.tex \footnote{
+%redundant: laplace.tex   \citerpg{bachman1964}{6}{9781483267562},
+%redundant: laplace.tex   \citerpgc{bracewell1978}{108}{007007013X}{Convolution theorem}
+%redundant: laplace.tex   }
+%redundant: laplace.tex %--------------------------------------
+%redundant: laplace.tex \defbox{\indxs{\conv}\begin{array}{M}
+%redundant: laplace.tex   The \opd{convolution operation} is defined as % $\conv\in\clF{\R^2}{\R}$ is defined as
+%redundant: laplace.tex   \\\indentx$\ds
+%redundant: laplace.tex     \brs{\ff\conv\fg}(x)
+%redundant: laplace.tex     \eqd \ff(x)\conv \fg(x)
+%redundant: laplace.tex     \eqd \int_{u\in\R} \ff(u)\fg(x-u) \du
+%redundant: laplace.tex     \qquad\scy\forall\ff,\fg\in\spLLRBu
+%redundant: laplace.tex   $
+%redundant: laplace.tex \end{array}}
+%redundant: laplace.tex \end{definition}
 
 \pref{thm:conv} (next) demonstrates that multiplication in the ``time domain"
 is equivalent to convolution in the ``frequency domain" and
@@ -436,6 +436,7 @@ vice-versa.
 %--------------------------------------
 \begin{theorem}[\thmd{convolution theorem}]
 \footnote{
+  \citerpg{bachman1964}{8}{9781483267562},
   \citerpg{bracewell1978}{110}{007007013X}
   }
 \label{thm:conv}
