--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -468,76 +468,9 @@ Let $\omega\eqd\Imag(s)$
 %======================================
 \section{Product properties}
 %======================================
-%--------------------------------------
-\begin{definition}
-\footnote{
-  \citerpgc{bachman2002}{268}{9780387988993}{Definition 5.2.1, but with $1/2\pi$ scaling factor},
-  \citerpg{bachman1964}{6}{9781483267562},
-  \citerpgc{bracewell1978}{224}{007007013X}{Table 11.1 Theorems for the Laplace Transform}
-  }
-\label{def:conv}
-%--------------------------------------
-\defbox{\indxs{\conv}\begin{array}{M}
-  The \opd{convolution operation} is defined as % $\conv\in\clF{\R^2}{\R}$ is defined as
-  \\\indentx$\ds
-    \brs{\ff\conv\fg}(x)
-    \eqd \ff(x)\conv \fg(x)
-    \eqd \int_{u\in\R} \ff(u)\fg(x-u) \du
-    \qquad\scy\forall\ff,\fg\in\spLLRBu
-  $
-\end{array}}
-\end{definition}
-
-\pref{thm:opLT_conv} (next) demonstrates that multiplication in the ``time domain"
-is equivalent to convolution in the ``s domain" and
-vice-versa.
-%--------------------------------------
-\begin{theorem}[\thmd{convolution theorem}]
-\footnote{
-  \citerpg{bachman1964}{8}{9781483267562}
-  }
-\label{thm:opLT_conv}
-%--------------------------------------
-Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
-and $\conv$ the convolution operator \xref{def:conv}.
-\thmbox{
-\begin{array}{rcl@{\qquad}C}
-  \mcom{\opLT\brs{\ff(x)\conv\fg(x)}(s)}{convolution    in ``time domain"}
-       &=& \mcom{\sqrt{2\pi}\brs{\opLT\ff}(s)\, \brs{\opLT\fg}(s)}  {multiplication in ``s domain"}
-       & \forall\ff,\fg\in\spLLRBu\\
-  \mcom{\opLT\brs{\ff(x) \fg(x)}(s)} {multiplication in ``time domain"}
-       &=& \mcom{\Lscale\brs{\opLT\ff}(s) \conv \brs{\opLT\fg}(s)}{convolution    in ``s domain"}
-       & \forall\ff,\fg\in\spLLRBu.
-\end{array}
-}
-\end{theorem}
-\begin{proof}
-\begin{align*}
-   \opLT \brs{\ff(x)\conv\fg(x)}(s)
-     &= \opLT \brs{ \int_{u\in\R} \ff(u)\fg(x-u) \du }(s)
-     && \text{by definition of $\conv$} &&\text{\xref{def:conv}}
-   \\&=  \int_{u\in\R} \ff(u)\brs{\opLT \fg(x-u)}(s) \du
-   \\&=  \int_{u\in\R} \ff(u) e^{-su} \; \brs{\opLT\fg(x)}(s) \du
-     && \text{by \prope{translation} property} 
-     && \text{\xref{thm:opLT_shift}}
-   \\&= \mcom{\brp{\Lscale\int_{u\in\R} \ff(u) e^{-su} \du}}
-             {$\brs{\opLT\ff}(s)$                          } \;
-        \brs{\opLT\fg}(s)
-   \\&= \brs{\opLT\ff}(s)\;  \brs{\opLT\fg}(s)
-     && \text{by definition of $\opLT$} &&\text{\xref{def:opLT}}
-   \\
-   \opLT[\ff(x)\fg(x)](s)
-     &= \opLT\brs{\brp{\opLT^{-1}\opLT\ff(x)}\;\fg(x)}(s)
-     && \text{by def. of operator inverse} &&\text{\ifxref{operator}{def:op_inv}}
-   \\&= \opLT\brs{\brp{ \Lscalei \int_{v\in\R} \brs{\opLT\ff(x)}(v) e^{sxv} \dv }\;\fg(x)}(s)
-     && \text{by \prefp{thm:opFTi}}
-   \\&= \Lscalei \int_{v\in\R} \brs{\opLT\ff(x)}(v) \brs{\opLT\brp{e^{sxv} \;\fg(x)}}(s,v) \dv
-   \\&= \Lscalei \int_{v\in\R} \brs{\opLT\ff(x)}(v) \brs{\opLT\fg(x)}(s-v) \dv
-     && \text{by \prefp{thm:ft_shift}}
-   \\&= \Lscalei\brs{\opLT\ff}(s)\conv \brs{\opLT\fg}(s)
-     && \text{by definition of $\conv$} &&\text{\xref{def:conv}}
-\end{align*}
-\end{proof}
+%\pref{thm:opLT_conv} (next) demonstrates that multiplication in the ``time domain"
+%is equivalent to convolution in the ``s domain" and
+%vice-versa.
 
 %=======================================
 \section{Calculus properties}
