--- a/common/sty/switches.sty
+++ b/common/sty/switches.sty
@@ -52,6 +52,7 @@
 \newboolean{cdma}
 \newboolean{cinput}
 \newboolean{convex}
+\newboolean{convolution}
 \newboolean{delta}
 \newboolean{dsp}
 \newboolean{distance}
