--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1344,6 +1344,7 @@
 
 \newcommand{\opZT} {\opXYZ{Z}} % z-transform operator
 \newcommand{\opLT} {\opXYZ{L}} % Laplace transform
+\newcommand{\opLTi} [0]{\opXYZ{L}^{-1}} % two-sided inverse Laplace Transform
 \newcommand{\opBT} [0]{\opXYZ{B}} % two-sided Laplace Transform
 \newcommand{\opBTi} [0]{\opXYZ{B}^{-1}} % two-sided inverse Laplace Transform
 
