--- a/common/algebra.tex
+++ b/common/algebra.tex
@@ -33,7 +33,7 @@ mathematical structures:
 
 %---------------------------------------
 \begin{definition}
-\citetbl{
+\footnote{
   \citerp{durbin2000}{29}
   }
 \index{group}
@@ -66,17 +66,17 @@ Let $\setX$ be a set and $\Diamond:\setX\times \setX\to \setX$ be an operation o
 
 %---------------------------------------
 \begin{definition}
-\citetbl{
+\footnote{
   \citerpp{durbin2000}{114}{115}
   }
 \label{def:ring}
 %---------------------------------------
-Let $+:\setX\times \setX\to \setX$ and $*:\setX\times \setX\to \setX$
+Let $+:\setX\times \setX\to \setX$ and $\cdot:\setX\times \setX\to \setX$
 be operations on a set $\setX$.
-Furthermore, let the operation $*$ also be represented by
-juxtapostion as in $a*b\equiv ab$.\\
+Furthermore, let the operation $\cdot$ also be represented by
+juxtapostion as in $a\cdot b\equiv ab$.\\
 \defboxt{
-  The triple $\otriple{\setX}{+}{*}$ is a \structd{ring} if
+  The triple $\otriple{\setX}{+}{\cdot}$ is a \structd{ring} if
   \\\indentx
   $\begin{array}{F lcl @{\qquad}C @{\qquad}D @{\qquad}D}
      1. & \mc{3}{l}{\text{$\opair{\setX}{+}$ is a group.}}
@@ -86,40 +86,40 @@ juxtapostion as in $a*b\equiv ab$.\\
         \\
      2. & x(yz)  &=& (xy)z
         & \forall x,y,z\in\setX
-        & (\prope{associative} with respect to $*$)
+        & (\prope{associative} with respect to $\cdot$)
         & and
         \\
      3. & x(y+z) &=& (xy)+(xz)
         & \forall x,y,z\in\setX
-        & ($*$ is \prope{left distributive} over $+$)
+        & ($\cdot$ is \prope{left distributive} over $+$)
         & and
         \\
      4. & (x+y)z &=& (xz)+(yz)
         & \forall x,y,z\in\setX
-        & ($*$ is \prope{right distributive} over $+$).
+        & ($\cdot$ is \prope{right distributive} over $+$).
   \end{array}$}
 \end{definition}
 
 %---------------------------------------
 \begin{definition}
-\citetbl{
+\footnote{
   \citerp{durbin2000}{118}
   }
 \label{def:com_ring}
 \index{ring!commutative}
 %---------------------------------------
 \defboxt{
-  A triple $\otriple{\setX}{+}{*}$ is a \structd{commutative ring} if
+  A triple $\otriple{\setX}{+}{\cdot}$ is a \structd{commutative ring} if
   \\\indentx
   $\begin{array}{FMCD}
-      1. & $\otriple{\setX}{+}{*}$ is a \structe{ring}  &                     &  and
+      1. & $\otriple{\setX}{+}{\cdot}$ is a \structe{ring}  &                     &  and
     \\2. & $xy=yx$                                      & \forall x,y\in\setX & (\prope{commutative}).
   \end{array}$}
 \end{definition}
 
 %--------------------------------------
 \begin{definition}
-\citetbl{
+\footnote{
   \citerpg{cohn}{312}{1852335874}
   }
 \label{def:abs}
@@ -149,31 +149,31 @@ Let $R$ be a \structe{commutative ring} \xref{def:com_ring}.
 \defboxt{
   The structure $F\eqd\fieldX$ is a \structd{field} if
   \\\indentx$\begin{array}{FlCDD}
-   1. & \otriple{\setX}{+}{*} \text{ is a ring}
+   1. & \otriple{\setX}{+}{\cdot} \text{ is a ring}
       &
       & (ring)
       & and
       \\
    2. & xy=yx
       & \forall x,y\in\setX
-      & (commutative with respect to $*$)
+      & (commutative with respect to $\cdot$)
       & and
       \\
-   3. & (\setX\setd\setn{0},*) \text{ is a group}
+   3. & (\setX\setd\setn{0},\cdot) \text{ is a group}
       &
-      & (group with respect to $*$).
+      & (group with respect to $\cdot$).
 \end{array}$}
 \end{definition}
 
 %---------------------------------------
 \begin{definition}
-\citetbl{
+\footnote{
   \citerp{aa}{3},
   \citerp{michel1993}{56}
   }
 \label{def:algebra}
 %---------------------------------------
-Let $\spV=(F,+,\cdot)$ be a vector space and
+Let $\spV=(F,+,\cdot)$ be a \structe{vector space} and
     $\otimes:\spV\times\spV\to\spV$ be a vector-vector multiplication operator.\\
 An \structd{algebra} is any pair $\opair{\spV}{\otimes}$ that satisfies
 ($\otimes$ is represented by juxtaposition)
