--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -750,6 +750,17 @@
   urla         = {http://www.amazon.com/dp/0387945091},
   }
 
+@book{bottcher1999,
+  isbn         = {9780387985701},
+  isbn10       = {0387985700},
+  author       = {A. B/:ottcher and B. Silbermann},
+  title        = {Introduction to Large Truncated Toeplitz Matrices},
+  publisher    = {Springer},
+  year         = {1999},
+  url          = {http://books.google.com/books?vid=ISBN9780387985701},
+  urla         = {http://www.amazon.com/dp/9780387985701},
+  }
+
 @article{bouniakowsky1859,
   author       = {V. Bouniakowsky},
   year         = {1859},
@@ -2496,9 +2507,13 @@
   title        = {Normierte Ringe},
   year         = {1941},
   journal      = {Mat. Sbornik},
-  volume       = {9},
-  number       = {51},
+  volume       = {9(51)},
+  number       = {1},
+  url          = {http://www.mathnet.ru/links/d19894c5545d2f75b3e1037162f86d58/sm6046.pdf},
   pages        = {3--24},
+  mathnet      = {http://mi.mathnet.ru/msb6046},
+  mathscinet   = {http://www.ams.org/mathscinet-getitem?mr=4726},
+  zmath        = {https://zbmath.org/?q=an:0024.32002|67.0406.02},
   }
 
 @article{gelfand1943,
@@ -5896,17 +5911,6 @@
   url          = {http://www.marshall.edu/wvas/public.html},
   }
 
-@book{bottcher1999,
-  isbn         = {9780387985701},
-  isbn10       = {0387985700},
-  author       = {A. B/:ottcher and B. Silbermann},
-  title        = {Introduction to Large Truncated Toeplitz Matrices},
-  publisher    = {Springer},
-  year         = {1999},
-  url          = {http://books.google.com/books?vid=ISBN9780387985701},
-  urla         = {http://www.amazon.com/dp/9780387985701},
-  }
-
 @book{singer1970,
   author       = {Iv/'an Singer},
   title        = {Bases in Banach Spaces I},
@@ -6265,6 +6269,23 @@
   url          = {http://books.google.com/books?vid=ISBN0821869191},
   urlw         = {http://www.worldcat.org/isbn/0821869191},
   urla         = {http://www.amazon.com/dp/0821869191},
+  }
+
+@book{taylor,
+  author       = {Brook Taylor},
+  title        = {Methodus Incrementorum Directa et Inversa},
+  address      = {London},
+  year         = {1715},
+  url          = {https://books.google.com/books?id=oA5tpwAACAAJ},
+  }
+
+@book{taylor1717,
+  author       = {Brook Taylor},
+  title        = {Methodus Incrementorum Directa et Inversa},
+  address      = {London},
+  year         = {1717},
+  pages        = {118},
+  url          = {https://books.google.com/books?id=zbgYn4lq4-EC},
   }
 
 @book{terras1999,
