--- a/common/bib/mathmisc.bib
+++ b/common/bib/mathmisc.bib
@@ -1413,19 +1413,11 @@
   title        = {A demonstration of the theorem that every homogeneous quadratic
                   polynomial is reducible by real orthogonal substitution to the form of a sum of positive and
                   negative squares},
-  journalx     = {\href{http://en.wikipedia.org/wiki/Philosophical_Magazine}{Philosophical Magazine}},
   journal      = {Philosophical Magazine},
-  publisher    = {\href{http://en.wikipedia.org/wiki/Taylor_\%26_Francis}{Taylor \& Francis Group}},
+  publisher    = {Taylor \& Francis Group},
   address      = {London},
   volume       = {4},
   pages        = {138--142},
-  }
-
-@book{taylor,
-  author       = {Brook Taylor},
-  title        = {Methodus Incrementorum Directa et Inversa},
-  address      = {London},
-  year         = {1715},
   }
 
 @book{thomae1875,
