--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -13,10 +13,10 @@ sont des germes de nouveaux calculs.}
 {The language of analysis, most perfect of all, being in itself a powerful instrument of discoveries,
 its notations, especially when they are necessary and happily imagined, are the seeds of new calculi.}
 \footnotetext{
-  \citerpuc{laplace1814}{xxxi}{https://archive.org/details/bub_gb_6MRLAAAAMAAJ/page/n35/}{Introduction},
+  \citerpcu{laplace1814}{xxxi}{Introduction}{https://archive.org/details/bub_gb_6MRLAAAAMAAJ/page/n35/},
   \citer{laplace1812},
   \citerppu{laplace1902}{48}{49}{https://books.google.com/books?id=DfI7AQAAMAAJ&pg=RA1-PA48},
-  \citerpuc{moritz1914}{200}{https://archive.org/details/memorabiliamath02morigoog/page/n217/}{Quote 1222., but ``conceived" not ``imagined", and ``are so many germs" not ``are the seeds"},
+  \citerpcu{moritz1914}{200}{Quote 1222., but ``conceived" not ``imagined", and ``are so many germs" not ``are the seeds"}{https://archive.org/details/memorabiliamath02morigoog/page/n217/},
   \url{https://todayinsci.com/L/Laplace_Pierre/LaplacePierre-Analysis-Quotations.htm},
   \url{https://translate.google.com/},
   }
@@ -27,9 +27,9 @@ its notations, especially when they are necessary and happily imagined, are the 
 \begin{definition}
 \footnote{
   \citerpgc{bracewell1978}{219}{007007013X}{Chapter 11 The Laplace transform},
-  \citerpuc{vanderpol1959}{13}{https://archive.org/details/in.ernet.dli.2015.141269/page/n23/mode/2up}{5. Strip of convergence of the Laplace integral},
-  \citerpuc{levy1958}{2}{https://archive.org/details/c_cowles_ieee_Levy/page/n5/mode/2up}{``two-sided transformation"},
-  \citerpuc{betten2008L}{295}{https://link.springer.com/content/pdf/bbm:978-3-540-85051-9/1.pdf}{(B.1)}
+  \citerpcu{vanderpol1959}{13}{5. Strip of convergence of the Laplace integral}{https://archive.org/details/in.ernet.dli.2015.141269/page/n23/mode/2up},
+  \citerpcu{levy1958}{2}{``two-sided transformation"}{https://archive.org/details/c_cowles_ieee_Levy/page/n5/mode/2up},
+  \citerpcu{betten2008L}{295}{(B.1)}{https://link.springer.com/content/pdf/bbm:978-3-540-85051-9/1.pdf}
   }
 \label{def:opLT}
 %--------------------------------------
@@ -50,7 +50,8 @@ Let $\spLLRBu$ be the space of all
 %--------------------------------------
 \begin{remark}
 %--------------------------------------
-The scaling factor $\frac{1}{\sqrt{2\pi}}$ is not typically found references offering 
+A scaling factor $\frac{1}{\sqrt{2\pi}}$ in front of $\int_\R$ in \pref{def:opLT}
+is not typically found in references offering 
 definitions of the Laplace Transform, and is not included here either.
 That is not to say, however, that it's not a good idea.
 Including it would make the operator $\opLT$ more directly compatible
@@ -82,7 +83,8 @@ Note also that a $\frac{1}{2\pi}$ scaling factor is included in
 %--------------------------------------
 \begin{theorem}
 \footnote{
-  \citerpgc{bracewell1978}{224}{007007013X}{Table 11.1 Theorems for the Laplace Transform}
+  \citerpgc{bracewell1978}{224}{007007013X}{Table 11.1 Theorems for the Laplace Transform},
+  \citerpcu{levy1958}{15}{Equation 0.8}{https://archive.org/details/c_cowles_ieee_Levy/page/n15/}
   }
 \label{thm:opLT_transversal}
 \label{thm:opLT_shift}
@@ -172,7 +174,8 @@ Let $\opLT$, $\fG(s)$, $A$, and $B$ be defined as in \prefpp{thm:opLT_transversa
 \begin{theorem}
 \footnote{
   \citerpgc{bracewell1978}{224}{007007013X}{Table 11.1 Theorems for the Laplace Transform},
-  \citerpuc{betten2008H}{296}{https://link.springer.com/content/pdf/bbm:978-3-540-85051-9/1.pdf}{(B.6)}
+  \citerpcu{betten2008H}{296}{(B.6)}{https://link.springer.com/content/pdf/bbm:978-3-540-85051-9/1.pdf},
+  \citerpcu{levy1958}{13}{Equation 0.2}{https://archive.org/details/c_cowles_ieee_Levy/page/n15/}
   }
 \label{thm:opLT_linear}
 %--------------------------------------
@@ -297,7 +300,7 @@ and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
 %-------------------------------------
 \begin{example}
 \footnote{
-  \citerpuc{levy1958}{19}{https://archive.org/details/c_cowles_ieee_Levy/page/n21/}{with $\psi=0$, $\alpha_0=\alpha$, and $\alpha_1=1$},
+  \citerpcu{levy1958}{19}{with $\psi=0$, $\alpha_0=\alpha$, and $\alpha_1=1$}{https://archive.org/details/c_cowles_ieee_Levy/page/n21/},
   \url{http://ece-research.unm.edu/bsanthan/ece541/table_ME.pdf},
   %\url{https://ethz.ch/content/dam/ethz/special-interest/baug/ibk/structural-mechanics-dam/education/identmeth/fourier.pdf}
   }
@@ -492,7 +495,7 @@ Let $\omega\eqd\Imag(s)$
 \end{proof}
 
 %=======================================
-\section{Unit step properties}
+\section{Windowing properties}
 %=======================================
 %---------------------------------------
 \begin{definition}
@@ -514,8 +517,8 @@ The \fnctd{Heaviside step function} $\step(x)$ or \fnctd{unit step function} is 
 \begin{theorem}
 \footnote{
   \citerpgc{bracewell1978}{227}{007007013X}{Table 11.2 Some Laplace transforms}
-  %\citerpuc{vanderpol1959}{13}{https://archive.org/details/in.ernet.dli.2015.141269/page/n23/mode/2up}{5. Strip of convergence of the Laplace integral},
-  %\citerpuc{levy1958}{2}{https://archive.org/details/c_cowles_ieee_Levy/page/n5/mode/2up}{``two-sided transformation"}
+  %\citerpcu{vanderpol1959}{13}{5. Strip of convergence of the Laplace integral}{https://archive.org/details/in.ernet.dli.2015.141269/page/n23/mode/2up},
+  %\citerpcu{levy1958}{2}{``two-sided transformation"}{https://archive.org/details/c_cowles_ieee_Levy/page/n5/mode/2up}
   }
 \label{thm:opLT_step}
 %---------------------------------------
@@ -550,8 +553,6 @@ and $\step(x)$ the \fncte{unit step} function.
 \begin{corollary}
 \footnote{
   \citerpgc{bracewell1978}{227}{007007013X}{Table 11.2 Some Laplace transforms}
-  %\citerpuc{vanderpol1959}{13}{https://archive.org/details/in.ernet.dli.2015.141269/page/n23/mode/2up}{5. Strip of convergence of the Laplace integral},
-  %\citerpuc{levy1958}{2}{https://archive.org/details/c_cowles_ieee_Levy/page/n5/mode/2up}{``two-sided transformation"}
   }
 \label{cor:opLT_step}
 %---------------------------------------
@@ -642,6 +643,36 @@ Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
 \end{align*}
 \end{proof}
 
+%---------------------------------------
+\begin{corollary}
+\footnote{
+  \citerpgc{bracewell1978}{227}{007007013X}{Table 11.2 Some Laplace transforms}
+  }
+\label{cor:opLT_step}
+%---------------------------------------
+Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
+and $\step(x)$ the \fncte{unit step} function.
+\corbox{\begin{array}{>{\ds}lc>{\ds}c     D     l                             C }
+    \mc{3}{N}{Transform}                & \mc{2}{|N}{Radius of Convergence} & \mc{1}{|N}{Domain}
+  \\\hline
+    \opLT\brs{e^{-\alpha\abs{x}}}  &=& \frac{2\alpha}{\alpha^2 - s^2}  & for & \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)} & x,\alpha\in\R
+\end{array}}
+\end{corollary}
+\begin{proof}
+{\begin{align*}
+  \opLT\brs{e^{-\alpha\abs{x}}}  
+    &\eqd \int_\R e^{-\alpha\abs{x}} e^{-sx} \dx
+    &&
+    && \text{by definition of $\opLT$}
+    && \text{\xref{def:opLT}}
+  \\&\eqd \int_\R \step( x) e^{-\alpha x} e^{-sx} \dx
+     +    \int_\R \step(-x) e^{ \alpha x} e^{-sx} \dx
+    &&
+    && \text{by definition of $\step(x)$}
+    && \text{\xref{def:step}}
+\end{align*}}
+\end{proof}
+
 %======================================
 \section{Product properties}
 \label{sec:opLT_conv}
@@ -710,7 +741,8 @@ Let $A$, $B$, $C$, and $D$ be defined as in \prefpp{cor:opLT_linear}.
 %---------------------------------------
 \begin{theorem}
 \footnote{
-  \citerpuc{betten2008L}{301}{https://link.springer.com/content/pdf/bbm:978-3-540-85051-9/1.pdf}{(B.27)}
+  \citerpcu{betten2008L}{301}{(B.27)}{https://link.springer.com/content/pdf/bbm:978-3-540-85051-9/1.pdf},
+  \citerpcu{levy1958}{15}{Equation 0.7}{https://archive.org/details/c_cowles_ieee_Levy/page/n15/}
   }
 \label{thm:opLT_diff}
 \label{thm:opLT_int}
