--- a/common/taylor.tex
+++ b/common/taylor.tex
@@ -94,8 +94,9 @@ On the other hand, the \ope{Fourier Transform} is a kind of counter-part of the 
   \citerpgc{flanigan1983}{221}{0486613887}{Theorem 15},
   \citerpg{strichartz1995}{281}{0867204710},
   \citerpgc{sohrab2003}{317}{0817642110}{Theorem 8.4.9},
-  \citor{taylor},
-  \citor{maclaurin}
+  \citer{taylor},
+  \citer{taylor1717},
+  \citer{maclaurin}
   %\citerc{as}{pages 14, 880}
   %\citerp{mallat}{164}
   }
