opLT step(-x)sin/cos

--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -143,7 +143,7 @@ and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
 \footnote{
   \citerpgc{bracewell1978}{224}{007007013X}{Table 11.1 Theorems for the Laplace Transform}
   }
-\label{cor:opLT_transversal}
+\label{cor:opLT_reversal}
 %--------------------------------------
 Let $\opLT$, $\fG(s)$, $A$, and $B$ be defined as in \prefpp{thm:opLT_transversal}.
 \corbox{\begin{array}{>{\ds}lc>{\ds}l   D       l              @{\hspace{2pt}}l     C                       D}
@@ -362,14 +362,14 @@ and $\step(x)$ the \fncte{unit step} function.
 %---------------------------------------
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
 and $\step(x)$ the \fncte{unit step} function.
-\corbox{\begin{array}{>{\ds}lc>{\ds}c     D     l                             C }
+\corbox{\begin{array}{F>{\ds}lc>{\ds}c     D     l                             C }
     \mc{3}{N}{Transform}                & \mc{2}{|N}{Radius of Convergence} & \mc{1}{|N}{Domain}
   \\\hline
-    \opLT\brs{\step(x)\cos(\omega_o x)}       &=& \frac{s}{s^2+\omega_o^2}         & for & \Real(s) > 0 & x,\omega_o\in\R
-  \\[2ex]\opLT\brs{\step(x)\sin(\omega_o x)}  &=& \frac{\omega_o}{s^2+\omega_o^2}  & for & \Real(s) > 0 & x,\omega_o\in\R
-  \\[2ex]\opLT\brs{\step(-x)}                 &=& \frac{-1}{s}                     & for & \Real(s) < 0 & x\in\R
-  \\[2ex]\opLT\brs{\step(-x)\cos(\omega_o x)} &=& \frac{-s}{s^2+\omega_o^2}        & for & \Real(s) < 0 & x,\omega_o\in\R
-  \\[2ex]\opLT\brs{\step(-x)\sin(\omega_o x)} &=& \frac{-\omega_o}{s^2+\omega_o^2} & for & \Real(s) < 0 & x,\omega_o\in\R
+         (1).& \opLT\brs{\step(x)\cos(\omega_o x)}  &=& \frac{s}{s^2+\omega_o^2}         & for & \Real(s) > 0 & x,\omega_o\in\R
+  \\[2ex](2).& \opLT\brs{\step(x)\sin(\omega_o x)}  &=& \frac{\omega_o}{s^2+\omega_o^2}  & for & \Real(s) > 0 & x,\omega_o\in\R
+  \\[2ex](3).& \opLT\brs{\step(-x)}                 &=& \frac{-1}{s}                     & for & \Real(s) < 0 & x\in\R
+  \\[2ex](4).& \opLT\brs{\step(-x)\cos(\omega_o x)} &=& \frac{-s}{s^2+\omega_o^2}        & for & \Real(s) < 0 & x,\omega_o\in\R
+  \\[2ex](5).& \opLT\brs{\step(-x)\sin(\omega_o x)} &=& \frac{-\omega_o}{s^2+\omega_o^2} & for & \Real(s) < 0 & x,\omega_o\in\R
 \end{array}}
 \end{corollary}
 \begin{proof}
@@ -391,20 +391,25 @@ and $\step(x)$ the \fncte{unit step} function.
   \opLT\brs{\step(-x)}
     &= \frac{-1}{s}
     && \Real(s) < 0
-   %&& \text{by \ope{reversal} property \xref{cor:opLT_transversal} and \pref{thm:opLT_step}}
-    && \text{by \prefpp{cor:opLT_transversal} and \pref{thm:opLT_step}}
+   %&& \text{by \ope{reversal} property \xref{cor:opLT_reversal} and \pref{thm:opLT_step}}
+    && \text{by \prefp{thm:opLT_step} and \prefp{cor:opLT_reversal}}
   \\
   \opLT\brs{\step(-x)\cos(\omega_o x)}
-    &= \frac{1}{2}\brs{\frac{-1}{s-i\omega_o}} + \frac{1}{2}\brs{\frac{-1}{s+i\omega_o}}
+    &= \opLT\brs{\step(-x)\cos(\omega_o(-x))}
+    && \text{by \prefp{thm:cos-x}}
+  \\&= \frac{(-s)}{(-s)^2+\omega_o^2}
     && \Real(s) < 0
-    && \text{by \prefp{cor:opLT_mod} and \pref{thm:opLT_step}}
+    && \text{by (1) and \ope{reversal} property \xref{cor:opLT_reversal}}
   \\&= \frac{-s}{s^2+\omega_o^2}
     && \Real(s) < 0
   \\
   \opLT\brs{\step(-x)\sin(\omega_o x)}
-    &= -\frac{i}{2}\brs{\frac{-1}{s-i\omega_o}} + \frac{i}{2}\brs{\frac{-1}{s+i\omega_o}}
+    &= \opLT\brs{-\step(-x)\sin(\omega_o(-x)}
+    && \text{by \prefp{thm:sin-x}}
+  \\&= \frac{-\omega_o}{(-s)^2+\omega_o^2}
+    && \text{by (2) and \pref{cor:opLT_reversal}}
+   %&& \text{by (2) and \ope{reversal} property \xref{cor:opLT_reversal}}
     && \Real(s) < 0
-    && \text{by \prefp{cor:opLT_mod} and \pref{thm:opLT_step}}
   \\&= \frac{-\omega_o}{s^2+\omega_o^2}
     && \Real(s) < 0
 \end{align*}
