--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -384,7 +384,7 @@ and $\step(x)$ the \fncte{unit step} function.
   \opLT\brs{\step(x)\sin(\omega_o x)}
     &= -\frac{i}{2}\brs{\frac{1}{s-i\omega_o}} + \frac{i}{2}\brs{\frac{1}{s+i\omega_o}}
     && \Real(s) > 0
-    && \text{by \prefp{cor:opLT_mod}, \pref{thm:opLT_step}}
+    && \text{by \pref{cor:opLT_mod} and \pref{thm:opLT_step}}
   \\&= \frac{\omega_o}{s^2+\omega_o^2}
     && \Real(s) > 0
   \\
@@ -392,24 +392,27 @@ and $\step(x)$ the \fncte{unit step} function.
     &= \frac{-1}{s}
     && \Real(s) < 0
    %&& \text{by \ope{reversal} property \xref{cor:opLT_reversal} and \pref{thm:opLT_step}}
-    && \text{by \prefp{thm:opLT_step} and \prefp{cor:opLT_reversal}}
+    && \text{by \pref{thm:opLT_step} and \pref{cor:opLT_reversal}}
   \\
   \opLT\brs{\step(-x)\cos(\omega_o x)}
     &= \opLT\brs{\step(-x)\cos(\omega_o(-x))}
+    &&
     && \text{by \prefp{thm:cos-x}}
   \\&= \frac{(-s)}{(-s)^2+\omega_o^2}
     && \Real(s) < 0
-    && \text{by (1) and \ope{reversal} property \xref{cor:opLT_reversal}}
+   %&& \text{by (1) and \ope{reversal} property \xref{cor:opLT_reversal}}
+    && \text{by (1) and \pref{cor:opLT_reversal}}
   \\&= \frac{-s}{s^2+\omega_o^2}
     && \Real(s) < 0
   \\
   \opLT\brs{\step(-x)\sin(\omega_o x)}
     &= \opLT\brs{-\step(-x)\sin(\omega_o(-x)}
+    &&
     && \text{by \prefp{thm:sin-x}}
   \\&= \frac{-\omega_o}{(-s)^2+\omega_o^2}
+    && \Real(s) < 0
     && \text{by (2) and \pref{cor:opLT_reversal}}
    %&& \text{by (2) and \ope{reversal} property \xref{cor:opLT_reversal}}
-    && \Real(s) < 0
   \\&= \frac{-\omega_o}{s^2+\omega_o^2}
     && \Real(s) < 0
 \end{align*}
@@ -424,29 +427,50 @@ and $\step(x)$ the \fncte{unit step} function.
 %---------------------------------------
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
 and $\step(x)$ the \fncte{unit step} function.
-\corbox{\begin{array}{>{\ds}lc>{\ds}c     D     l                             C }
+\corbox{\begin{array}{F>{\ds}lc>{\ds}c     D     l                             C }
     \mc{3}{N}{Transform}                & \mc{2}{|N}{Radius of Convergence} & \mc{1}{|N}{Domain}
   \\\hline
-    \opLT\brs{\step(x)\cos(\omega_o x)e^{-\alpha x}} &=& \frac{s+\alpha}{(s+\alpha)^2+\omega_o^2}  & for & \Real(s) > -\Real(\alpha) & x,\omega_o\in\R;\,\alpha\in\C
-    \\[2ex]
+           (1).&\opLT\brs{\step(x)\cos(\omega_o x)e^{-\alpha x}} &=& \frac{s+\alpha}{(s+\alpha)^2+\omega_o^2}  & for & \Real(s) > -\Real(\alpha) & x,\omega_o\in\R;\,\alpha\in\C
+    \\[2ex](2).&
     \opLT\brs{\step(x)\sin(\omega_o x)e^{-\alpha x}} &=& \frac{\omega_o}{(s+\alpha)^2+\omega_o^2}  & for & \Real(s) > -\Real(\alpha) & x,\omega_o\in\R;\,\alpha\in\C
+    \\[2ex](3).&
+    \opLT\brs{\step(-x)\cos(-\omega_o x)e^{\alpha x}} &=& \frac{-s+\alpha}{(s-\alpha)^2+\omega_o^2}  & for & \Real(s) > -\Real(\alpha) & x,\omega_o\in\R;\,\alpha\in\C
+    \\[2ex](4).&
+    \opLT\brs{\step(-x)\sin(-\omega_o x)e^{\alpha x}} &=& \frac{\omega_o}{(s-\alpha)^2+\omega_o^2}  & for & \Real(s) > -\Real(\alpha) & x,\omega_o\in\R;\,\alpha\in\C
 \end{array}}
 \end{corollary}
 \begin{proof}
 \begin{align*}
-  \opLT\brs{\step(x)\cos(\omega_o x)e^{-\alpha x}} 
-    &= \frac{s+\alpha}{(s+\alpha)^2+\omega_o^2}  
+  \opLT\brs{\step(x)\cos(\omega_o x)e^{-\alpha x}}
+    &= \frac{s+\alpha}{(s+\alpha)^2+\omega_o^2}
     && \forall\Real(s) \in\intoo{0-\Real(\alpha)}{\infty-\Real(\alpha)}
     && \text{by \pref{cor:opLT_step} and \pref{thm:opLT_mod}}
-  \\&= \frac{s+\alpha}{(s+\alpha)^2+\omega_o^2}  
-    && \forall\Real(s) > -\Real(\alpha) 
+  \\&= \frac{s+\alpha}{(s+\alpha)^2+\omega_o^2}
+    && \forall\Real(s) > -\Real(\alpha)
   \\
-  \opLT\brs{\step(x)\sin(\omega_o x)e^{-\alpha x}} 
-    &= \frac{\omega_o}{(s+\alpha)^2+\omega_o^2}  
+  \opLT\brs{\step(x)\sin(\omega_o x)e^{-\alpha x}}
+    &= \frac{\omega_o}{(s+\alpha)^2+\omega_o^2}
     && \forall\Real(s) \in\intoo{0-\Real(\alpha)}{\infty-\Real(\alpha)}
     && \text{by \pref{cor:opLT_step} and \pref{thm:opLT_mod}}
-  \\&= \frac{\omega_o}{(s+\alpha)^2+\omega_o^2}  
-    && \forall\Real(s) > -\Real(\alpha) 
+  \\&= \frac{\omega_o}{(s+\alpha)^2+\omega_o^2}
+    && \forall\Real(s) > -\Real(\alpha)
+  \\
+  \opLT\brs{\step(-x)\cos(-\omega_o x)e^{\alpha x}}
+    &= \frac{-s+\alpha}{(-s+\alpha)^2+\omega_o^2}
+    && \forall\Real(s) < \Real(\alpha)
+    && \text{by (1) and \pref{cor:opLT_reversal}}
+  \\&= \frac{-s+\alpha}{(s-\alpha)^2+\omega_o^2}
+    && \forall\Real(s) < \Real(\alpha)
+  \\
+  \opLT\brs{\step(-x)\sin(-\omega_o x)e^{\alpha x}}
+    &= \frac{\omega_o}{(-s+\alpha)^2+\omega_o^2}
+    && \forall\Real(s) < \Real(\alpha)
+    && \text{by (2) and \pref{cor:opLT_reversal}}
+  \\&= \frac{\omega_o}{(-s+\alpha)^2+\omega_o^2}
+    && \forall\Real(s) < \Real(\alpha)
+    && \text{by (2) and \pref{cor:opLT_reversal}}
+  \\&= \frac{\omega_o}{(s-\alpha)^2+\omega_o^2}
+    && \forall\Real(s) < \Real(\alpha)
 \end{align*}
 \end{proof}
 
@@ -496,10 +520,12 @@ Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
 %---------------------------------------
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
 and $\step(x)$ the \fncte{unit step} function.
-\corbox{\begin{array}{>{\ds}lc>{\ds}c                                    D     l                                                    C }
+\corbox{\begin{array}{>{\ds}lc>{\ds}l                                    D     l                                                    C }
     \mc{3}{N}{Transform}                                               & \mc{2}{|N}{Radius of Convergence}                        & \mc{1}{|N}{Domain}
   \\\hline
     \opLT\brs{e^{-\alpha\abs{x}}}  &=& \frac{2\alpha}{\alpha^2 - s^2}  & for & \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)} & x,\alpha\in\R
+  \\
+    \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}}  &=& \frac{s+\alpha}{(s+\alpha)^2 + \omega_o^2} +  \frac{-s+\alpha}{(s-\alpha)^2 + \omega_o^2}  & for & \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)} & x,\alpha\in\R
 \end{array}}
 \end{corollary}
 \begin{proof}
@@ -526,6 +552,14 @@ and $\step(x)$ the \fncte{unit step} function.
     && \forall\Real(s)\in\intoo{-\Real(\alpha)}{\Real(\alpha)}
   \\&= \frac{2\alpha}{\alpha^2 - s^2}
     && \forall\Real(s)\in\intoo{-\Real(\alpha)}{\Real(\alpha)}
+  \\\\
+    \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}}
+      &= \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step(x)}
+       + \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step(-x)}
+    \\&= \opLT\brs{\cos( \omega_o x)e^{-\alpha x}\step( x)}
+       + \opLT\brs{\cos(-\omega_o x)e^{ \alpha x}\step(-x)}
+    \\&= \frac{s+\alpha}{(s+\alpha)^2 + \omega_o^2} +  \frac{-s+\alpha}{(s-\alpha)^2 + \omega_o^2}
+      && \forall \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)}
 \end{align*}}
 \end{proof}
 
